# git-mind

./: .clang-format  .clang-tidy  .coderabbit.yml  .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  0_build-test.txt  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_vs_THE_ENFORCER.md  CONTRIBUTING.md  COVENANT.md  Claude_Clean_Code_Clean_Code_Careful_Code_C.md  DEPENDENCY_ANALYSIS.md  DEVLOG_1736371200_zero_warnings_achievement.md  DEVLOG_1752146206_migration_tracking_system.md  Dockerfile.dev  Dockerfile.gauntlet  GRAPH_SCHEMA.md  GUIDE.md  Gemini Explores git-mind.md  LICENSE  MIGRATION_STATUS.md  Makefile  Makefile.docker  NEXT_CLAUDE_MISSION_BRIEFING.md  NOTICE  README.md  ROADMAP.md  SITREP_$(date +%s)_journal_attribution_migration_complete.md  SITREP_1736449964_edge_migration_gnu_cry_gauntlet.md  SITREP_1736542964_cache_migration_status.md  (+29 more)
.ci/: Dockerfile
.githooks/: pre-commit  pre-commit-quality  pre-push  pre-push-docker  pre-push-full  pre-push-orchestrator.sh  pre-push-quick  pre-push-sequential
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICAL_USE.md  SECURITY.md  early-testers.md  git-mind.yml.example  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: apply-feedback.yml  architecture-gates.yml  auto-seed-review.yml  c_core.yml  check-pr-template.yml  ci.yml  code-quality.yml  coderabbit-status.yml  core-quality.yml  gauntlet.yml  gitmind-review.yml  gitmind-suggest.yml  label-docs-only.yml  release.yml  review-artifact-cleanup.yml  seed-review.yml  update-features-ledger.yml
.gm_cache_query_tmp/: HEAD  config
.legacy/: ARCHITECTURE.md  CLAUDE-FINAL-NOTES.md  HN Demo Plan.md  Launch Post.md  Launch Ready Checklist.md  README.md  V25.md  VISION-2025.md  VISION.md  file-renames-and-moves.md  git-notes-for-semantic-enrichment.md  git-notes-spec-idea.md  holy-grail-architecture.md  link-file-format.md  open-problems.md  security-review-fixes.md  straight-c.md  tree-based-architecture.md
.legacy/src_legacy/: error.c  random_default.c
.reuse/: dep5
.trash/: NEO4J_FILES_REMOVED.md  README.md  SITREP_$(date +%s)_journal_attribution_migration_complete.md  gm-neo4j-upsert-edge.sh  neo4j-constraints.json  neo4j-curl.sh  neo4j-export-edges.sh  neo4j-show-task.sh  neo4j-task-gm-docker-neo4j-2025-09-12.json  test_edge_compile_check
action/: post-comment.js
apps/cli/: README.md  Scripting_Patterns.md  cache_rebuild.c  cli_runtime.c  cli_runtime.h  install_hooks.c  link.c  link.md  list.c  list.md  main.c  main.md  output.c
assets/images/: git-mind-transparent.avif
benchmarks/: Makefile  README.md  wildebeest_stampede.c
core/: .clang-tidy  Makefile  combined_files.txt
core/tests/: test_edge_quality_v2.c
docs/: ARCHITECTURE.md  CI_STRATEGY.md  DEV_SETUP.md  Legacy_Mapping.md  QUICK_START.md  README.md  REVIEW_RUBRIC.md  RISK_REGISTER.md  RISK_REVIEW_CHECKLIST.md  SOLID_DRY_REPORT.md  TECHNICAL.md  TECHNICAL.md.md  TIDY_CLANG_CRUSADE.md  VISION_NORTH_STAR.md  adult_swim.md  cleanup-report.md  dogfood-session.md  install.md  libgitledger.md  philosophy.md  roadmap.md  static-analysis-guide.md  tools-vs-custom-checks.md  tutorial.md
docs/PRDs/: PRD-co-thought-mcp-service.md  PRD-git-mind-semantics-time-travel-prototype.md
docs/activity/: 2025-09.md  2025-10-09_pr_feedback.md
docs/adr/: 0001-first-class-semantics.md  0002-docs-reorganization.md  ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  README.md
docs/api/: gitmind-api-reference.md
docs/architecture/: FEEDBACK_hexagonal-ports-and-adapters.md  MIGRATION_PHILOSOPHY.md  MODULAR_RESTRUCTURE_PLAN.md  Memory Allocation Strategies.md  Memory_Allocation_Policy.md  README.md  Ref_Name_Validation.md  System_Architecture.md  attribution-integration-guide.md  attribution-system.md  attribution-use-cases.md  attribution.md  augments-system.md  bitmap-cache-design.md  cache-architecture.md  cache-migration-oid-only.md  fs_temp_service_plan.md  how-it-works.md  journal-architecture-pivot.md  journal-architecture.md  system-overview.md  tombstone-visual.md
docs/audits/: vision-drift.md
docs/charter/: Project_Charter.md
docs/cli/: README.md  gitmind.md  (+5 more)
examples/: library_usage.c
include/: gitmind.h  gitmind_lib.h
quality/: .clang-tidy  .clang-tidy-nuclear  .clang-tidy.legacy  .clang-tidy.linus
scripts/: migrate-module.sh  review-checklist.sh  setup-hooks.sh  setup.sh  update_progress.py
src/: .gitignore  DO-NOT-BUILD-HERE.txt  Makefile  content.js  context-envelope.js  context.js  dag.js  diff.js  doctor.js  edges.js  epoch.js  errors.js  export.js  extension.js  format-pr.js  frontmatter.js  gitignore.example  gitmind_internal.h  graph.js  hooks.js  import.js  index.js  lens.js  merge.js  nodes.js  remote.js  review.js  status.js  suggest.js  update-check.js  validators.js  version.js  views.js
test/: Dockerfile  api-surface.test.js  content.test.js  context-envelope.test.js  context.test.js  contracts.integration.test.js  contracts.test.js  dag.test.js  diff.test.js  doctor.test.js  edges.test.js  epoch.test.js  error-propagation.test.js  errors.test.js  export.test.js  extension.integration.test.js  extension.test.js  format-pr.test.js  frontmatter.test.js  graph.test.js  hooks.test.js  import.test.js  lens.test.js  merge.test.js  nodes.test.js  proving-ground.test.js  remote.test.js  resolve-context.test.js  review.test.js  status.test.js  suggest.test.js  update-check.test.js  validators.test.js  version.test.js  views.test.js
tests/: CHANGES.md  README.md  test_attribution  test_attribution.c  test_output_control.sh
tools/: README.md  baseline.txt  baseline_grouped.txt  check-warning-fix.sh  count_warnings.py  dev-shell.sh  docker-build.sh  docker-clang-tidy.sh  docker-clean.sh  docker-test.sh  enforce-public-includes.sh  enforce_no_new_warnings.sh  generate_baseline.sh  header_compile.c  parse_warnings.py  regenerate-baseline.sh  run-clang-tidy.sh  run_fuzz.py
(+512 files in other folders)
